[package]
name = "telio"
version = "5.0.1"
authors = ["info@nordvpn.com"]
edition = "2018"
license = "GPL-3.0-only"
repository = "https://github.com/NordSecurity/libtelio"

[lib]
crate-type = ["cdylib", "lib"]

[features]
pretend_to_be_macos = ["telio-model/pretend_to_be_macos"]

[dependencies]
blake3 = "1.5.1"
cfg-if = "1.0.0"
ffi_helpers = "0.3.0"
h2 = "=0.3.26" # RUSTSEC-2024-0332

anyhow.workspace = true
async-trait.workspace = true
base64.workspace = true
crypto_box.workspace = true
futures.workspace = true
ipnet.workspace = true
if-addrs.workspace = true
lazy_static.workspace = true
libc.workspace = true
modifier.workspace = true
num_cpus.workspace = true
parking_lot.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
rand.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
tracing-subscriber.workspace = true
uniffi.workspace = true
uuid.workspace = true

telio-crypto.workspace = true
telio-dns.workspace = true
telio-network-monitors.workspace = true
telio-firewall.workspace = true
telio-lana.workspace = true
telio-model.workspace = true
telio-nat-detect.workspace = true
telio-nurse.workspace = true
telio-pmtu.workspace = true
telio-proto.workspace = true
telio-batcher.workspace = true
telio-proxy.workspace = true
telio-pq.workspace = true
telio-relay.workspace = true
telio-sockets.workspace = true
telio-starcast.workspace = true
telio-task.workspace = true
telio-traversal.workspace = true
telio-utils.workspace = true
telio-wg.workspace = true
once_cell.workspace = true
nat-detect.workspace = true
smart-default.workspace = true

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.19"
rustls-platform-verifier = { git = "https://github.com/tomaszklak/rustls-platform-verifier.git", rev = "2db68dd17d76eadb062176b913040341b99ef4f3" }

[target.'cfg(windows)'.dependencies]
winapi = { workspace = true, features = ["ntdef", "winerror"] }


[dev-dependencies]
maplit.workspace = true
slog-async = "2.7"
slog-term = "2.8"

mockall.workspace = true
ntest.workspace = true
pretty_assertions.workspace = true
rstest.workspace = true
tokio = { workspace = true, features = ["test-util"] }

dersp = { git = "https://github.com/mathiaspeters/dersp.git", branch = "librarification"}

telio-dns = { workspace = true, features = ["mockall"] }
telio-firewall = { workspace = true, features = ["mockall"] }
telio-nurse = { workspace = true, features = ["mockall"] }
telio-proxy = { workspace = true, features = ["mockall"] }
telio-batcher = { workspace = true }
telio-pq = { workspace = true, features = ["mockall"] }
telio-test.workspace = true
telio-traversal = { workspace = true, features = ["mockall"] }
telio-wg = { workspace = true, features = ["mockall", "test-adapter"] }

[build-dependencies]
anyhow.workspace = true
cc.workspace = true
uniffi = { workspace = true, features = ["build"] }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[workspace]
resolver = "2"
members = [
	"crates/*",
	"clis/*",
	"systests",
]
exclude = [
	"wireguard-go-rust-wrapper"
]

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1.51"
base64 = "0.13.0"
bytes = "1"
cc = "1.0"
clap = { version = "3.1", features = ["derive"] }
crypto_box = { version = "0.9.1", features = ["std"] }
env_logger = "0.9.0"
futures = "0.3"
hashlink = "0.8.3"
hex = "0.4.3"
httparse = "1.8.0"
if-addrs = "0.12.0"
ipnet = { version = "2.3", features = ["serde"] }
ipnetwork = "0.18"
itertools = "0.10"
lazy_static = "1.4.0"
libc = "0.2.112"
tracing = { version = "0.1.37", features = ["max_level_trace", "release_max_level_debug"] }
maplit = "1"
mockall = "0.11.3"
mockall_double = "0.3.1"
modifier = "0.1.0"
nat-detect = { git = "https://github.com/NordSecurity/nat-detect.git", tag = "v0.1.8" }
ntest = "0.7"
num_cpus = "1.15.0"
num_enum = "0.6.1"
once_cell = "1"
parking_lot = "0.12"
pnet_packet = "0.34.0"
pretty_assertions = "0.7.2"
proptest = "1.2.0"
proptest-derive = "0.5"
protobuf-codegen-pure = "2"
rand = "0.8"
regex = "1.5.5"
rstest = "0.11.0"
rustc-hash = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.6"
slog = "2.7"
smart-default = "0.7.1"
sn_fake_clock = "0.4"
socket2 = "0.5"
strum = { version = "0.24.0", features = ["derive"] }
surge-ping = { version = "0.8.0" }
thiserror = "1.0"
time = { version = "0.3.36", features = ["formatting"] }
tokio = ">=1.22"
tracing-subscriber = { version = "0.3.17", features = ["local-time"] }
tracing-appender = "0.2.3"
uniffi = { git = "https://github.com/NordSecurity/uniffi-rs.git", tag = "v0.3.1+v0.25.0" }
url = "2.2.2"
uuid = { version = "1.1.2", features = ["v4"] }
winapi = { version = "0.3", features = ["netioapi", "ws2def"] }
windows = { version = "0.56", features = [
    "Win32_Networking_WinSock",
    "Win32_NetworkManagement_IpHelper",
] }

boringtun = { git = "https://github.com/NordSecurity/boringtun.git", tag = "v1.2.7", features = ["device"] }
x25519-dalek = { version = "2.0.1", features = ["reusable_secrets", "static_secrets"] }


telio-crypto = { version = "0.1.0", path = "./crates/telio-crypto" }
telio-dns = { version = "0.1.0", path = "./crates/telio-dns" }
telio-firewall = { version = "0.1.0", path = "./crates/telio-firewall" }
telio-lana = { version = "0.1.0", path = "./crates/telio-lana" }
telio-model = { version = "0.1.0", path = "./crates/telio-model" }
telio-nat-detect = { version = "0.1.0", path = "./crates/telio-nat-detect" }
telio-network-monitors = { version = "0.1.0", path = "./crates/telio-network-monitors" }
telio-nurse = { version = "0.1.0", path = "./crates/telio-nurse" }
telio-proto = { version = "0.1.0", path = "./crates/telio-proto" }
telio-batcher = { version = "0.1.0", path = "./crates/telio-batcher" }
telio-proxy = { version = "0.1.0", path = "./crates/telio-proxy" }
telio-relay = { version = "0.1.0", path = "./crates/telio-relay" }
telio-sockets = { version = "0.1.0", path = "./crates/telio-sockets" }
telio-starcast = { version = "0.1.0", path = "./crates/telio-starcast" }
telio-task = { version = "0.1.0", path = "./crates/telio-task" }
telio-test = { version = "1.0.0", path = "./crates/telio-test" }
telio-traversal = { version = "0.1.0",  path = "./crates/telio-traversal" }
telio-utils = { version = "0.1.0", path = "./crates/telio-utils" }
telio-wg = { version = "0.1.0", path = "./crates/telio-wg" }
telio-pq = { version = "0.1.0", path = "./crates/telio-pq" }
telio-pmtu = { version = "0.1.0", path = "./crates/telio-pmtu" }

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
debug = "full"

[profile.dev]
debug = 0
strip = "debuginfo"
overflow-checks = false

#TODO: remove this when anyone starts using telio-starcast
[workspace.metadata.cargo-udeps.ignore]
normal = ["telio-starcast"]
