[package]
name = "telio"
version = "6.1.0"
authors = ["info@nordvpn.com"]
edition = "2018"
license = "GPL-3.0-only"
repository = "https://github.com/NordSecurity/libtelio"

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = ["enable_ens", "enable_firewall"]
pretend_to_be_macos = ["telio-model/pretend_to_be_macos"]
disable_ens = []
enable_ens = ["telio-proto/enable_ens"]
enable_firewall = ["telio-firewall"]

[dependencies]
cfg-if = "1.0.4"
ffi_helpers = "0.3.0"
# We need this specific version for libmoose

anyhow.workspace = true
async-trait.workspace = true
base64.workspace = true
enum-map.workspace = true
futures.workspace = true
ipnet.workspace = true
lazy_static.workspace = true
num_cpus.workspace = true
parking_lot.workspace = true
serde_json.workspace = true
rand.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
tracing-subscriber.workspace = true
uniffi.workspace = true
uuid.workspace = true
wireguard-uapi.workspace = true

telio-crypto.workspace = true
telio-dns.workspace = true
telio-network-monitors.workspace = true
telio-firewall = { workspace = true, optional = true }
telio-lana.workspace = true
telio-model.workspace = true
telio-nurse.workspace = true
telio-proto.workspace = true
telio-proxy.workspace = true
telio-pq.workspace = true
telio-relay.workspace = true
telio-sockets.workspace = true
telio-starcast.workspace = true
telio-task.workspace = true
telio-traversal.workspace = true
telio-utils.workspace = true
telio-wg.workspace = true
once_cell.workspace = true
nat-detect.workspace = true
time.workspace = true
libloading = "0.9.0"
itertools.workspace = true

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"
rustls-platform-verifier.workspace = true

[target.'cfg(windows)'.dependencies]
winapi = { workspace = true, features = ["ntdef", "winerror"] }


[dev-dependencies]
maplit.workspace = true

mockall.workspace = true
rstest.workspace = true
tokio = { workspace = true, features = ["test-util"] }

telio-dns = { workspace = true, features = ["mockall"] }
telio-firewall = { workspace = true, features = ["mockall"] }
telio-nurse = { workspace = true, features = ["mockall"] }
telio-proxy = { workspace = true, features = ["mockall"] }
telio-pq = { workspace = true, features = ["mockall"] }
telio-traversal = { workspace = true, features = ["mockall"] }
telio-utils.workspace = true
telio-wg = { workspace = true, features = ["mockall", "test-adapter"] }

[build-dependencies]
anyhow.workspace = true
uniffi = { workspace = true, features = ["build"] }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[workspace]
resolver = "2"
members = ["crates/*", "clis/*"]

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
base64 = "0.22"
blake3 = "1.8"
bytes = "1"
cc = "1"
clap = { version = "4.5", features = ["derive"] }
crypto_box = { version = "0.9.1", features = ["std"] }
enum-map = "2.7.3"
env_logger = "0.11"
futures = "0.3.31"
hashlink = "0.11"
hex = "0.4.3"
httparse = "1.10"
if-addrs = "0.15.0"
ipnet = { version = "2.11", features = ["serde"] }
itertools = "0.14"
lazy_static = "1.5"
libc = "0.2"
tracing = { version = "0.1", features = [
  "max_level_trace",
  "release_max_level_debug",
] }
maplit = "1"
mockall = "0.14"
mockall_double = "0.3.1"
modifier = "0.1.0"
nat-detect = { git = "https://github.com/NordSecurity/nat-detect.git", tag = "v0.1.8" }
nix = { version = "0.31.1", features = ["fs", "socket", "uio", "net"] }
ntest = "0.9"
num_cpus = "1"
num_enum = "0.7"
once_cell = "1"
parking_lot = "0.12"
pnet_packet = "0.35"
pretty_assertions = "1"
proptest = "1.9"
proptest-derive = "0.8.0"
protobuf-codegen = "3.7.2"
rand = "0.8.5"
rand_core = "0.6.4"
regex = "1.12"
rstest = "0.26.1"
rustc-hash = "2"
rustls-platform-verifier = "0.6.2"
rustls = { version = "0.23", default-features = false, features = [
  "ring",
  "std",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.9"
slog = "2.8"
smart-default = "0.7.1"
sn_fake_clock = "0.4"
socket2 = "0.6"
strum = { version = "0.28.0", features = ["derive"] }
surge-ping = { version = "0.8" }
thiserror = "2"
time = { version = "0.3", features = ["formatting"] }
tokio = ">=1.22"
tracing-subscriber = { version = "0.3", features = [
  "local-time",
  "env-filter",
] }
tracing-appender = "0.2"
uniffi = "0.28.3"
url = "2.5"
uuid = { version = "1.19", features = ["v4"] }
wireguard-uapi = { git = "https://github.com/NordSecurity/wireguard-uapi-rs.git", rev = "5f5d9952ced4faf10f56d98153e4a8e560102e5c", features = ["xplatform", "zeroize"], default-features = false  }
winapi = { version = "0.3", features = ["netioapi", "ws2def"] }
windows = { version = "0.62.2", features = [
  "Win32_Networking_WinSock",
  "Win32_NetworkManagement_IpHelper",
] }
winreg = "0.55.0"

neptun = { git = "https://github.com/NordSecurity/neptun.git", tag = "v2.3.0", features = [
  "device",
] }
x25519-dalek = { version = "2.0.1", features = [
  "reusable_secrets",
  "static_secrets",
] }
zeroize = { version = "1.8.2", features = ["derive"] }
hyper-util = "0.1.19"

telio-crypto = { version = "0.1.0", path = "./crates/telio-crypto" }
telio-dns = { version = "0.1.0", path = "./crates/telio-dns" }
telio-firewall = { version = "0.1.0", path = "./crates/telio-firewall" }
telio-lana = { version = "0.1.0", path = "./crates/telio-lana" }
telio-model = { version = "0.1.0", path = "./crates/telio-model" }
telio-network-monitors = { version = "0.1.0", path = "./crates/telio-network-monitors" }
telio-nurse = { version = "0.1.0", path = "./crates/telio-nurse" }
telio-proto = { version = "0.1.0", path = "./crates/telio-proto" }
telio-proxy = { version = "0.1.0", path = "./crates/telio-proxy" }
telio-relay = { version = "0.1.0", path = "./crates/telio-relay" }
telio-sockets = { version = "0.1.0", path = "./crates/telio-sockets" }
telio-starcast = { version = "0.1.0", path = "./crates/telio-starcast" }
telio-task = { version = "0.1.0", path = "./crates/telio-task" }
telio-test = { version = "1.0.0", path = "./crates/telio-test" }
telio-traversal = { version = "0.1.0", path = "./crates/telio-traversal" }
telio-utils = { version = "0.1.0", path = "./crates/telio-utils" }
telio-wg = { version = "0.1.0", path = "./crates/telio-wg" }
telio-pq = { version = "0.1.0", path = "./crates/telio-pq" }
telio-pinger = { version = "0.1.0", path = "./crates/telio-pinger" }

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
debug = "full"

[profile.dev]
debug = 0
strip = "debuginfo"

#TODO: remove this when anyone starts using telio-starcast
[workspace.metadata.cargo-udeps.ignore]
normal = ["telio-starcast"]

[workspace.metadata.cargo-machete]
ignored = ["tracing"]
