[project]
name = "nat-lab"
version = "0.1"
requires-python = ">=3.10"
dependencies = [
    "aiodocker==0.23.0 ; python_full_version >= '3.8'",
    "aiohappyeyeballs==2.4.3 ; python_full_version >= '3.8'",
    "aiohttp==3.10.2 ; python_full_version >= '3.8'",
    "aiosignal==1.3.1 ; python_full_version >= '3.7'",
    "astroid==3.2.2 ; python_full_version >= '3.8'",
    "async-timeout==4.0.3 ; python_full_version >= '3.7'",
    "asyncssh==2.14.2 ; python_full_version >= '3.6'",
    "attrs==24.2.0 ; python_full_version >= '3.7'",
    "autoflake==2.3.1 ; python_full_version >= '3.8'",
    "black==24.1.1 ; python_full_version >= '3.8'",
    "certifi==2024.8.30 ; python_full_version >= '3.6'",
    "cffi==1.17.1 ; python_full_version >= '3.8'",
    "charset-normalizer==3.4.0 ; python_full_version >= '3.7'",
    "click==8.1.7 ; python_full_version >= '3.7'",
    "cryptography==43.0.3 ; python_full_version >= '3.7'",
    "dataclasses-json==0.6.7 ; python_full_version >= '3.7' and python_full_version < '4.0'",
    "deepdiff==8.1.1 ; python_full_version >= '3.8'",
    "dill==0.3.8 ; python_full_version >= '3.8'",
    "distlib==0.3.8",
    "exceptiongroup==1.2.2 ; python_full_version >= '3.7'",
    "filelock==3.15.1 ; python_full_version >= '3.8'",
    "flatten-json==0.1.14",
    "frozenlist==1.5.0 ; python_full_version >= '3.8'",
    "idna==3.10 ; python_full_version >= '3.6'",
    "iniconfig==2.0.0 ; python_full_version >= '3.7'",
    "isort==5.13.2 ; python_full_version >= '3.8'",
    "jinja2==3.1.4 ; python_full_version >= '3.7'",
    "markupsafe==3.0.2 ; python_full_version >= '3.9'",
    "marshmallow==3.23.0 ; python_full_version >= '3.9'",
    "mccabe==0.7.0 ; python_full_version >= '3.6'",
    "multidict==6.1.0 ; python_full_version >= '3.8'",
    "mypy-extensions==1.0.0 ; python_full_version >= '3.5'",
    "mypy==1.13.0 ; python_full_version >= '3.8'",
    "orderly-set==5.2.3 ; python_full_version >= '3.8'",
    "packaging==24.1 ; python_full_version >= '3.8'",
    "paho-mqtt==2.1.0 ; python_full_version >= '3.7'",
    "pathspec==0.12.1 ; python_full_version >= '3.8'",
    "pipenv==2024.0.1 ; python_full_version >= '3.8'",
    "platformdirs==4.2.2 ; python_full_version >= '3.8'",
    "pluggy==1.5.0 ; python_full_version >= '3.8'",
    "propcache==0.2.0 ; python_full_version >= '3.8'",
    "protobuf==3.20.3 ; python_full_version >= '3.7'",
    "psutil==6.1.0 ; python_full_version >= '2.7'",
    "py==1.11.0 ; python_full_version >= '2.7'",
    "pycparser==2.22 ; python_full_version >= '3.8'",
    "pyflakes==3.2.0 ; python_full_version >= '3.8'",
    "pylint==3.2.3 ; python_full_version >= '3.8'",
    "pyro5==5.15 ; python_full_version >= '3.7'",
    "pytest-asyncio==0.24.0 ; python_full_version >= '3.8'",
    "pytest-html==4.1.1 ; python_full_version >= '3.8'",
    "pytest-metadata==3.1.1 ; python_full_version >= '3.8'",
    "pytest-order==1.3.0 ; python_full_version >= '3.7'",
    "pytest-repeat==0.9.3 ; python_full_version >= '3.7'",
    "pytest-rerunfailures==14.0 ; python_full_version >= '3.8'",
    "pytest-timeout==2.3.1 ; python_full_version >= '3.7'",
    "pytest==8.3.3 ; python_full_version >= '3.8'",
    "python-wireguard==0.2.2",
    "pyyaml==6.0.2 ; python_full_version >= '3.8'",
    "regex==2024.5.15 ; python_full_version >= '3.8'",
    "requests==2.32.3 ; python_full_version >= '3.8'",
    "scapy==2.5.0 ; python_full_version >= '2.7' and python_full_version < '4.0'",
    "serpent==1.41 ; python_full_version >= '3.2'",
    "setuptools==70.0.0 ; python_full_version >= '3.8'",
    "six==1.16.0 ; python_full_version >= '2.7'",
    "tomli==2.0.2 ; python_full_version >= '3.8'",
    "tomlkit==0.12.5 ; python_full_version >= '3.7'",
    "types-protobuf==3.19.21",
    "types-psutil==6.1.0.20241022 ; python_full_version >= '3.8'",
    "types-pyyaml==6.0.12.20240917 ; python_full_version >= '3.8'",
    "typing-extensions==4.12.2 ; python_full_version >= '3.8'",
    "typing-inspect==0.9.0",
    "urllib3==2.2.3 ; python_full_version >= '3.8'",
    "virtualenv==20.26.2 ; python_full_version >= '3.7'",
    "yarl==1.17.0 ; python_full_version >= '3.9'",
    "pytest-shard>=0.1.2",
]

[tool.black]
preview = true
extend-exclude = "tests/protobuf|tests/uniffi/telio_bindings.py"

[tool.isort]
profile = "black"
force_single_line = false
no_inline_sort = true
sort_reexports = true
float_to_top = true
combine_star = true
remove_redundant_aliases = true
combine_as_imports = true
no_sections = true
skip = ["tests/protobuf", "tests/uniffi/telio_bindings.py"]

[tool.autoflake]
remove-unused-variables = true
remove-all-unused-imports = true
remove-duplicate-keys = true
ignore-init-module-imports = true
recursive = true
in-place = true

[tool.mypy]
check_untyped_defs = true
enable_error_code = ['possibly-undefined', 'redundant-expr', 'unused-awaitable']
extra_checks = true
strict_equality = true
exclude = [
    '^tests/protobuf',
    '^.*telio_bindings\.py',
]

[[tool.mypy.overrides]]
module = "uniffi.*"
check_untyped_defs = false

[tool.pylint]
max-line-length = 88
ignore-paths = ".venv,tests/protobuf,tests/uniffi/telio_bindings.py"

[tool.pylint.'MESSAGES CONTROL']
recursive = true
disable = [
    "invalid-name",
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "nonlocal-and-global",
    "subprocess-run-check",
    "broad-exception-raised",
    "line-too-long",
    "too-many-locals",
    "wrong-import-order",
    "too-many-arguments",
    "too-many-instance-attributes",
    "too-many-boolean-expressions",
    "fixme",
    "too-many-public-methods",
    "too-few-public-methods",
    "too-many-statements",
    "global-statement",
    "bare-except",
    "too-many-branches",
    "duplicate-code"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = [
    "--html=report.html",
    "--self-contained-html"
]
markers = [
    "nat: the test only passes once, before environment needs to be restarted",
    "windows: tests that require Windows VM to be running",
    "mac: tests that require Mac VM to be running",
    "linux_native: tests that use linux native WG implementation",
    "long: tests that take a lot of time to run",
    "moose: test that requires build with full moose",
    "ipv4: tests only ipv4 WG connectivity",
    "ipv6: tests only ipv6 WG connectivity",
    "ipv4v6: tests dual stack WG connectivity",
    "batching: tests packet batching",
    "utils: tests the natlab utilities",
]
filterwarnings = [
    "ignore::DeprecationWarning"
]
