[project]
name = "nat-lab"
version = "0.1"
requires-python = ">=3.10"
dependencies = [
    "aiodocker==0.23.0",
    "aiohappyeyeballs==2.4.3",
    "aiohttp==3.10.2",
    "aiosignal==1.3.1",
    "astroid==3.2.2",
    "async-timeout==4.0.3",
    "asyncssh==2.21.0",
    "attrs==24.2.0",
    "autoflake==2.3.1",
    "black==24.1.1",
    "certifi==2024.8.30",
    "cffi==1.17.1",
    "charset-normalizer==3.4.0",
    "click==8.1.7",
    "cryptography==43.0.3",
    "dacite==1.9.2",
    "dataclasses-json==0.6.7",
    "deepdiff==8.1.1",
    "dill==0.3.8",
    "distlib==0.3.8",
    "exceptiongroup==1.2.2",
    "grpcio-tools==1.72.0",
    "filelock==3.15.1",
    "flatten-json==0.1.14",
    "frozenlist==1.5.0",
    "idna==3.10",
    "iniconfig==2.0.0",
    "isort==5.13.2",
    "jinja2==3.1.4",
    "markupsafe==3.0.2",
    "marshmallow==3.23.0",
    "mccabe==0.7.0",
    "multidict==6.1.0",
    "mypy-extensions==1.0.0",
    "mypy==1.13.0",
    "orderly-set==5.2.3",
    "packaging==24.1",
    "paho-mqtt==2.1.0",
    "pathspec==0.12.1",
    "platformdirs==4.2.2",
    "pluggy==1.5.0",
    "propcache==0.2.0",
    "protobuf==6.30.2",
    "psutil==6.1.0",
    "py==1.11.0",
    "pycparser==2.22",
    "pyflakes==3.2.0",
    "pylint==3.2.3",
    "pyro5==5.15",
    "pytest-asyncio==0.24.0",
    "pytest-html==4.1.1",
    "pytest-metadata==3.1.1",
    "pytest-order==1.3.0",
    "pytest-repeat==0.9.3",
    "pytest-rerunfailures==14.0",
    "pytest-timeout==2.3.1",
    "pytest==8.3.3",
    "python-wireguard==0.2.2",
    "pyyaml==6.0.2",
    "regex==2024.5.15",
    "requests==2.32.3",
    "scapy==2.6.0",
    "serpent==1.41",
    "setuptools==70.0.0",
    "six==1.16.0",
    "tomli==2.0.2",
    "tomlkit==0.12.5",
    "types-protobuf==6.30.2.20250703",
    "types-psutil==6.1.0.20241022",
    "types-pyyaml==6.0.12.20240917",
    "typing-extensions==4.12.2",
    "typing-inspect==0.9.0",
    "urllib3==2.2.3",
    "virtualenv==20.26.6",
    "yarl==1.17.0",
    "pytest-shard>=0.1.2",
    "aiofiles>=24.1.0",
]

[tool.black]
preview = true
extend-exclude = "tests/protobuf|bin/grpc_protobuf|tests/uniffi/telio_bindings.py"

[tool.isort]
profile = "black"
force_single_line = false
no_inline_sort = true
sort_reexports = true
float_to_top = true
combine_star = true
remove_redundant_aliases = true
combine_as_imports = true
no_sections = true
skip = [".venv", "tests/protobuf", "bin/grpc_protobuf", "bin/ens", "tests/uniffi/telio_bindings.py"]

[tool.autoflake]
remove-unused-variables = true
remove-all-unused-imports = true
remove-duplicate-keys = true
ignore-init-module-imports = true
recursive = true
in-place = true
exclude = ["telio_bindings.py", "ens", "*pb2*"]

[tool.mypy]
check_untyped_defs = true
enable_error_code = ['possibly-undefined', 'redundant-expr', 'unused-awaitable']
extra_checks = true
strict_equality = true

exclude = [
    '^tests/protobuf',
    '^.*telio_bindings\.py',
    '.*ens_pb2_grpc.py',
]

[[tool.mypy.overrides]]
module = "protobuf.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "uniffi.*"
check_untyped_defs = false

[[tool.mypy.overrides]]
module = "tests.uniffi.telio_bindings"
ignore_errors = true

[tool.pylint.main]
init-hook = "import sys, os; sys.path.insert(0, os.getcwd())"

[tool.pylint]
max-line-length = 88
ignore-paths = ".venv,tests/protobuf,bin/grpc_protobuf,tests/uniffi/telio_bindings.py"

[tool.pylint.'MESSAGES CONTROL']
recursive = true
disable = [
    "invalid-name",
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "nonlocal-and-global",
    "subprocess-run-check",
    "broad-exception-raised",
    "line-too-long",
    "too-many-locals",
    "wrong-import-order",
    "too-many-arguments",
    "too-many-instance-attributes",
    "too-many-boolean-expressions",
    "fixme",
    "too-many-public-methods",
    "too-few-public-methods",
    "too-many-statements",
    "global-statement",
    "bare-except",
    "too-many-branches",
    "duplicate-code"
]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
asyncio_mode = "auto"
addopts = [
    "--html=report.html",
    "--self-contained-html"
]
filterwarnings = [
    "ignore::DeprecationWarning"
]
log_format = "%(asctime)s,%(msecs)03d | %(levelname)s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
markers = [
    "nat: the test only passes once, before environment needs to be restarted",
    "windows: tests that require Windows VM to be running",
    "windows2: tests that require a second Windows VM to be running",
    "mac: tests that require Mac VM to be running",
    "linux_native: tests that use linux native WG implementation",
    "fullcone: tests that require fullcone containers to be running",
    "nlx: tests that require nlx VM to be running",
    "long: tests that take a lot of time to run",
    "moose: test that requires build with full moose",
    "ipv4: tests only ipv4 WG connectivity",
    "ipv6: tests only ipv6 WG connectivity",
    "ipv4v6: tests dual stack WG connectivity",
    "utils: tests the natlab utilities",
    "openwrt: tests that require OpenWrt VM to be running",
]

[tool.pyright]
exclude = ["**/.venv"]
