[package]
name = "wg-go-rust-wrapper"
version = "1.0.0"
edition = "2021"
license = "GPL-3.0-only"
repository = "https://github.com/NordSecurity/libtelio"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.99"


[build-dependencies]
cc = "1.0"