[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.16", default-features = false, features = [
    "json",
    "blocking",
    "rustls-tls",
] }
shellwords = "1.1.0"
dirs = "4.0.0"

clap.workspace = true
tokio = { workspace = true, features = ["full"] }
anyhow.workspace = true

base64.workspace = true
crypto_box.workspace = true
hex.workspace = true
ipnetwork.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
parking_lot.workspace = true
rand = { workspace = true, features = ["std", "std_rng"] }
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true
sha2.workspace = true
thiserror.workspace = true
time.workspace = true

telio = { path = "../.." }
telio-crypto.workspace = true
telio-model.workspace = true
telio-nat-detect.workspace = true
telio-proto.workspace = true
telio-relay.workspace = true
telio-sockets.workspace = true
telio-task.workspace = true
telio-traversal.workspace = true
telio-utils.workspace = true
telio-wg.workspace = true