[package]
name = "daemon-common"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
tokio = { workspace = true, features = ["full"] }

# Used as a lightweight and safe (because a TCP server has the risk of remote code execution)
# way for the API and daemon to communicate.
# Tokio support is needed, because the daemon runs on the async runtime.
interprocess = "1.2.1"

# Used only for checking if the daemon is running.
sysinfo = "0.30.11"
