[package]
name = "derpcli"
version = "0.3.0"
edition = "2018"
authors = ["nord <info@nordsec.com>"]
license = "GPL-3.0-only"
repository = "https://github.com/NordSecurity/libtelio"

[dependencies]
atomic-counter = "1.0.1"
ctrlc = "3.5.1"

anyhow.workspace = true
base64.workspace = true
clap.workspace = true
crypto_box.workspace = true
futures.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
time = { workspace = true, features = ["macros", "local-offset"] }
tokio = { workspace = true, features = [
  "io-util",
  "net",
  "sync",
  "macros",
  "rt-multi-thread",
  "io-std",
  "time",
] }
url.workspace = true

telio-crypto.workspace = true
telio-relay = { workspace = true, features = ["enable_ens"] }
telio-sockets.workspace = true

[dev-dependencies]
rstest.workspace = true
