[package]
name = "derpmon"
version = "0.1.0"
edition = "2021"
authors = ["nord <info@nordsec.com>"]
license = "GPL-3.0-only"
repository = "https://github.com/NordSecurity/libtelio"

[dependencies]
tokio = { version = ">=1.22", features = ["io-util", "net", "sync", "macros", "rt-multi-thread", "io-std", "time"] }
structopt = "0.3.26"
url = "2.2.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

telio-crypto = { path = "../../crates/telio-crypto" }
telio-relay = { path = "../../crates/telio-relay" }
telio-sockets = { path = "../../crates/telio-sockets" }
anyhow = "1.0.69"