[package]
name = "dtcli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
daemonize = "0.5.0"
tonic = "0.10.2"
prost = "0.12"
psutil = "3.2.1"
nix = { version = "0.27.1", features = ["process", "user"] }

clap.workspace = true
tokio = { workspace = true, features = ["full"] }
anyhow.workspace = true
serde_json.workspace = true
users = "0.11.0"
parking_lot.workspace = true
telio-model.workspace = true

common = { path = "../common" }

[features]
dtcli = []

[build-dependencies]
tonic-build = "0.10"

[package.metadata.build-dependencies]
